main.tf
provider "aws" {
  region = "us-east-1"
  profile = "default"
}

#1. Create vpc
resource "aws_vpc" "prod_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}

#2. Create Internet Gateway
resource "aws_internet_gateway" "prod_gateway" {
  vpc_id = aws_vpc.prod_vpc.id

  tags = {
    Name = "main"
  }
}

#3. Create custom route table
resource "aws_route_table" "prod_route_table" {
  vpc_id = aws_vpc.prod_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.prod_gateway.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id             = aws_internet_gateway.prod_gateway.id
  }

  tags = {
    Name = "production"
  }
}

#4. Create a subnet
resource "aws_subnet" "subnet_1" {
  vpc_id = aws_vpc.prod_vpc.id
  cidr_block = var.subnetprefix
  availability_zone = "us-east-1a"

  tags = {
    Name = "production"
  }
}

#5. Associate subnet with Route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet_1.id
  route_table_id = aws_route_table.prod_route_table.id
}

#6. Create security group to allow port 22, 80, 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.prod_vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description    = "HTTPS"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 2
    to_port          = 2
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#7. Create a network interface with an ip in the subnet that was created in step #4

resource "aws_network_interface" "web_server_nic" {
  subnet_id       = aws_subnet.subnet_1.id
  private_ips     = ["10.0.200.50"]
  security_groups = [aws_security_group.allow_web.id]
}

#8. Assign elastic IP to the network interface created in step # 7

resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.web_server_nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.prod_gateway  ]
}

#9. Create Ubuntu server and install/enable apache2
resource "aws_instance" "web_server_instance" {
  ami = "ami-0fc5d935ebf8bc3bc"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "pikapika_key_pair"
  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web_server_nic.id
  }

  user_data =  <<EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2 
                sudo bash -c "echo your very first web server > /var/www/html/index.html"
                EOF
  
  tags = {
    Name = "web-server"
  }
}

#10. Output the public ip address

output "server_public_ip" {
  value = aws_eip.one.public_ip
}

output "server_private_ip" {
  value = aws_instance.web_server_instance.private_ip
}

output "server_id" {
  value = aws_instance.web_server_instance.arn
}

#resource "aws_instance" "app_server" {
# ami           = "ami-05c13eab67c5d8861"
#  ami           = "ami-0fc5d935ebf8bc3bc"
#  instance_type = var.ec2_instance_type

#  tags = {
#    Name = var.instance_name
#  }

# }

#resource "aws_instance" "app_server_test" {
#  ami           = "ami-05c13eab67c5d8861"
#  instance_type = var.ec2_instance_type

#  tags = {
#    Name = "EC2 Kedua"
#  }

#}

#resource "aws_instance" "web2" {
#  ami           = "ami-05c13eab67c5d8861"
#  instance_type = "t3.micro"

#  tags = {
#    Name = "Hello"
#  }

# lifecycle {
#    create_before_destroy = true
#  }
#}


# resource "aws_vpc" "first-vpc" {
#   cidr_block = "10.0.0.0/16"
#   tags = {
#     Name = "production"
#   }
# }  

# resource "aws_s3_bucket" "my_bucket" {
#   bucket = "s33-7686872-add"
#   #acl    = "private"
# }

# resource "aws_subnet" "subnet-1" {
#   vpc_id     = aws_vpc.first-vpc.id
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "my-prod-subnet"
#   }
# }
